19380
Why?
```scala
object Foo { def foo[A]: (A*) => A = as => as.head }
```

ok:
```scala
scala> Foo.foo(1,2,3)
res1: Int = 1
```

not ok:
```scala
scala> import Foo.foo; foo(1,2,3)
<console>:10: error: too many arguments for method apply: (v1: Seq[A])A in trait Function1
        foo(1,2,3)
           ^
```
